--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,20 @@ ul{
   transition-duration: 0.4s;
 }
 
+ .showcase{
+    position: absolute;
+    right: 0;
+    width: 100%;
+    min-height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #111;
+    color: #fff;
+    z-index:2;
+ }
+ 
  .main-video{
     position: absolute;
     top: 0;
@@ -90,3 +104,172 @@ ul{
     object-fit: cover;
     opacity: 0.8;
 }
+  
+.text{
+    position: relative;
+    z-index: 10;
+}
+
+.text h2{
+    font-size: 5em;
+    font-weight: 800;
+    line-height: 1em;
+    text-transform: uppercase;
+}
+.text h3{
+    font-size: 4em;
+    font-weight: 700;
+    line-height: 1em;
+    text-transform: uppercase;
+}
+.text p{
+    font-size: 1.1em;
+    margin: 20px 0;
+    font-weight: 400;
+    max-width: 700px;
+}
+
+.btn{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    min-width: 100px;
+    padding: 10px 30px;
+    margin-top: 10px;
+    border: 2px solid #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    overflow: hidden;
+    z-index: 2;
+  }
+  
+  .btn:hover span {
+    color: #000;
+  }
+  
+  .btn .hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    color: #000;
+    z-index: -1;
+    transform: translateY(100%);
+    transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+  }
+  
+  .btn:hover .hover {
+    transform: translateY(0);
+  }
+  .btn-container .btn:first-child {
+    margin-right: 10px;
+  }
+  
+  .btn-container .btn:last-child {
+    margin-left: 10px;
+  }
+  .social{
+    position: absolute;
+    bottom: 80px;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .social li a {
+    display: inline-block;
+    font-size: 1.5rem;
+    color: #fff;
+    margin-right: 20px;
+    transform: translateY(-5px);
+    transition: transform 0.5s;
+  }
+  .social li a:hover{
+    transform: translateY(-10px);
+  }
+  .nav {
+    height: 20px; /* change the height to the desired value */
+  }
+  /*Hamburger*/
+  /* .hamburger{
+    position: fixed;
+    top: 40px;
+    right: 20px;
+    z-index: 10;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    background: none;
+    border: none;
+  }
+  .hamburger-top,
+  .hamburger-middle,
+  .hamburger-bottom {
+    position:absolute;
+    width: 100%;
+    height: 2px;
+    top: 0; */
+    /* left: 0;
+    background: #fff;
+    transition: all 0.5s;
+  }
+  .hamburger-middle{
+    transform: translateY(5px);
+  }
+  .hamburger-bottom{
+    transform: translateY(10px);
+  } */
+  
+  /* Transition hamburger to X when open
+.open {
+    transform: rotate(90deg);
+  }
+  
+  .open .hamburger-top {
+    transform: rotate(45deg) translateY(6px) translateX(6px);
+  }
+  
+  .open .hamburger-middle {
+    display: none;
+  }
+  
+  .open .hamburger-bottom {
+    transform: rotate(-45deg) translateY(6px) translateX(-6px);
+  }
+   */
+  /* overlay-show
+  .overlay-show{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0,0.5);
+    z-index: 3;
+  } */
+@media(max-width:991px){
+    .showcase,.showcase .main-header{
+        padding: 40px;
+    }
+    .text h2{
+        font-size: 3em;
+    }
+    .text h3{
+        font-size: 2em;
+    }
+    
+}
+@media(max-width:960px){
+    .desktop-main-menu{
+        display: none;
+        
+    }
+    .logo{
+        width: 150px;
+         margin: auto;
+    }
+}
+  
