--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,9 @@ ul{
     object-fit: cover;
     opacity: 0.8;
 }
-  
+.section-animate {
+    animation: fadeIn 2s ease-in-out;
+  }
 .text{
     position: relative;
     z-index: 10;
@@ -115,18 +117,22 @@ ul{
     font-weight: 800;
     line-height: 1em;
     text-transform: uppercase;
+    animation: fadeInUp 0.5s ease-in-out;
 }
 .text h3{
     font-size: 4em;
     font-weight: 700;
     line-height: 1em;
     text-transform: uppercase;
+    animation: fadeInUp 0.5s ease-in-out 0.2s;
+  animation-fill-mode: both;
 }
 .text p{
     font-size: 1.1em;
     margin: 20px 0;
     font-weight: 400;
     max-width: 700px;
+    
 }
 
 .btn{
@@ -249,7 +255,43 @@ ul{
     height: 100%;
     background-color: rgb(0, 0, 0,0.5);
     z-index: 3;
-  } */
+  /* } 
+  /* Animations */
+@keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateY(140px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+  
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeBounce {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    40% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  /* Media query */ 
 @media(max-width:991px){
     .showcase,.showcase .main-header{
         padding: 40px;
